# uibk_hardware

./: README.md
kit_head_description/robot/: kit_head.urdf
uibk_hardware/: CMakeLists.txt  package.xml
uibk_robot/: urdf.rviz
uibk_robot/launch/: display.launch  upload.launch
uibk_robot/meshes/: torso.dae  torso_convex.stl
uibk_robot/meshes/sensors/: kinect2.dae
uibk_robot/urdf/: dummy_eef.xacro  kuka_lwr_arm_defs.xacro  model_assembled.xacro.old  sensor_kinect.xacro  table.xacro  torso.xacro  uibk_robot.xacro  uibk_robot_arm_link.xacro  uibk_robot_left_sdh.xacro  uibk_robot_object_setup.xacro  uibk_robot_right_sdh.xacro  uibk_robot_table.xacro
